Convert packaging from jar to plugin